--- a/rbs_collection.lock.yaml
+++ b/rbs_collection.lock.yaml
@@ -2,11 +2,19 @@
 sources:
 - type: git
   name: ruby/gem_rbs_collection
-  revision: 0aad7a9acb950f56c6e836499373555f1071eb3d
+  revision: 4f55d83688a772342f0d96966cd51d06af03c2c8
   remote: https://github.com/ruby/gem_rbs_collection.git
   repo_dir: gems
 path: ".gem_rbs_collection"
 gems:
+- name: actioncable
+  version: '7.1'
+  source:
+    type: git
+    name: ruby/gem_rbs_collection
+    revision: 4f55d83688a772342f0d96966cd51d06af03c2c8
+    remote: https://github.com/ruby/gem_rbs_collection.git
+    repo_dir: gems
 - name: actionmailer
   version: '7.0'
   source:
@@ -71,6 +79,14 @@ gems:
     revision: 0aad7a9acb950f56c6e836499373555f1071eb3d
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
+- name: addressable
+  version: '2.8'
+  source:
+    type: git
+    name: ruby/gem_rbs_collection
+    revision: 4f55d83688a772342f0d96966cd51d06af03c2c8
+    remote: https://github.com/ruby/gem_rbs_collection.git
+    repo_dir: gems
 - name: ast
   version: '2.4'
   source:
@@ -111,6 +127,14 @@ gems:
   version: '0'
   source:
     type: stdlib
+- name: diff-lcs
+  version: '1.5'
+  source:
+    type: git
+    name: ruby/gem_rbs_collection
+    revision: 4f55d83688a772342f0d96966cd51d06af03c2c8
+    remote: https://github.com/ruby/gem_rbs_collection.git
+    repo_dir: gems
 - name: fileutils
   version: '0'
   source:
@@ -163,6 +187,22 @@ gems:
     revision: 0aad7a9acb950f56c6e836499373555f1071eb3d
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
+- name: marcel
+  version: '1.0'
+  source:
+    type: git
+    name: ruby/gem_rbs_collection
+    revision: 4f55d83688a772342f0d96966cd51d06af03c2c8
+    remote: https://github.com/ruby/gem_rbs_collection.git
+    repo_dir: gems
+- name: mini_mime
+  version: '0.1'
+  source:
+    type: git
+    name: ruby/gem_rbs_collection
+    revision: 4f55d83688a772342f0d96966cd51d06af03c2c8
+    remote: https://github.com/ruby/gem_rbs_collection.git
+    repo_dir: gems
 - name: minitest
   version: '0'
   source:
@@ -199,6 +239,18 @@ gems:
     revision: 0aad7a9acb950f56c6e836499373555f1071eb3d
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
+- name: parser
+  version: '3.2'
+  source:
+    type: git
+    name: ruby/gem_rbs_collection
+    revision: 4f55d83688a772342f0d96966cd51d06af03c2c8
+    remote: https://github.com/ruby/gem_rbs_collection.git
+    repo_dir: gems
+- name: pathname
+  version: '0'
+  source:
+    type: stdlib
 - name: rack
   version: '2.2'
   source:
@@ -231,12 +283,44 @@ gems:
     revision: 0aad7a9acb950f56c6e836499373555f1071eb3d
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
+- name: rake
+  version: '13.0'
+  source:
+    type: git
+    name: ruby/gem_rbs_collection
+    revision: 4f55d83688a772342f0d96966cd51d06af03c2c8
+    remote: https://github.com/ruby/gem_rbs_collection.git
+    repo_dir: gems
 - name: redis
   version: '4.2'
   source:
     type: git
     name: ruby/gem_rbs_collection
     revision: 0aad7a9acb950f56c6e836499373555f1071eb3d
+    remote: https://github.com/ruby/gem_rbs_collection.git
+    repo_dir: gems
+- name: regexp_parser
+  version: '2.8'
+  source:
+    type: git
+    name: ruby/gem_rbs_collection
+    revision: 4f55d83688a772342f0d96966cd51d06af03c2c8
+    remote: https://github.com/ruby/gem_rbs_collection.git
+    repo_dir: gems
+- name: rubocop
+  version: '1.57'
+  source:
+    type: git
+    name: ruby/gem_rbs_collection
+    revision: 4f55d83688a772342f0d96966cd51d06af03c2c8
+    remote: https://github.com/ruby/gem_rbs_collection.git
+    repo_dir: gems
+- name: rubocop-ast
+  version: '1.30'
+  source:
+    type: git
+    name: ruby/gem_rbs_collection
+    revision: 4f55d83688a772342f0d96966cd51d06af03c2c8
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: rubyzip
@@ -271,6 +355,14 @@ gems:
   version: '0'
   source:
     type: stdlib
+- name: thor
+  version: '1.2'
+  source:
+    type: git
+    name: ruby/gem_rbs_collection
+    revision: 4f55d83688a772342f0d96966cd51d06af03c2c8
+    remote: https://github.com/ruby/gem_rbs_collection.git
+    repo_dir: gems
 - name: time
   version: '0'
   source:
@@ -283,6 +375,14 @@ gems:
   version: '0'
   source:
     type: stdlib
+- name: tzinfo
+  version: '2.0'
+  source:
+    type: git
+    name: ruby/gem_rbs_collection
+    revision: 4f55d83688a772342f0d96966cd51d06af03c2c8
+    remote: https://github.com/ruby/gem_rbs_collection.git
+    repo_dir: gems
 - name: uri
   version: '0'
   source:
