refactor: melhorar estrutura de modulos e classes e algumas assinaturas de tipos

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -184,6 +184,9 @@ Layout/MultilineMethodCallIndentation:
   Enabled: true
   EnforcedStyle: indented
 
+Layout/LeadingCommentSpace:
+  Enabled: false
+
 # Rails Cops
 Rails/Delegate:
   Description: 'Prefer delegate method for delegations.'
